# hft-data-analysis

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
data/sample/: sample_book.csv  sample_trades.csv
scripts/: collect_book.py  convert_trades_to_book.py  download_binance.py  downloader.py  prepare_data.py  quick_metrics.py  run_all.py
src/: data_cleaning.py  downloader.py  features.py  fit.py  report.py  viz.py
src/hft_data_analysis.egg-info/: PKG-INFO  SOURCES.txt
src/tests/: test_basic.py  test_cleaning.py  test_features.py  test_fit.py
templates/: report.html
